more bugs squashed

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -95,6 +95,7 @@ header  {
     display: inline-flex;
     margin-top: 0;
     margin-bottom: 0;
+    align-items: center;
         h1 {
             margin-top: 0;
             margin-bottom: 0;
@@ -176,4 +177,29 @@ a {
 
 .btn1:hover::before {
     height: 1100%;
+}
+
+@media only screen and (max-width: 600px) {
+    .btn {
+        background-color: #F9F6F6;
+    }
+
+    .card {
+        max-width: 200px;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .card-title {
+        h1 {
+            font-size: 20px;
+        }
+    }
+}
+
+
+@media only screen and (max-width: 812px) {
+    .btn {
+        background-color: #F9F6F6;
+    }
 }
